z-index fix

--- a/web/css/report_fix.css
+++ b/web/css/report_fix.css
@@ -30,7 +30,7 @@
 }
 
 .menu-drop-wrapper .menu-dropdown{
-    position: fixed;
+    position: fixed !important;
     top: 18px;
     margin: 0;
     list-style: none;
